Rename bintray org from dreamscale to dreamscale-io

--- a/build.gradle
+++ b/build.gradle
@@ -30,4 +30,7 @@ check.dependsOn integrationTest
 
 bintray {
 	publications = ['gradleDocker']
+    pkg {
+        licenses = ['Apache-2.0']
+    }
 }
